--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Manoj Asarsa" />
     <meta name="keywords" content="video library, playNow" />
-    <meta name="theme-color" content="#fff" />
-    <meta name="title" content="Video Library App" />
-    <meta name="description"content="A fully-functional Video Library" />
+    <meta name="theme-color" content="#0e0e0e" />
+    <meta name="title" content="Video Library App - The home for videos that matter" />
+    <meta name="description"content="The latest news, sports, music and entertainment videos on PlayNow." />
 
     <link rel="stylesheet" href="https://zero-ui.netlify.app/docs/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Lora:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
